--- a/BlazorBattles/Client/Shared/TopMenu.razor
+++ b/BlazorBattles/Client/Shared/TopMenu.razor
@@ -1,4 +1,7 @@
-﻿@Bananas
+﻿<div class="top-menu">
+    <img src="icons/I_C_Banana.png" /> @Bananas
+</div>
+
 
 @code {
     public int Bananas { get; set; } = 100;
