Parameters and button component for bananas

--- a/BlazorBattles/Client/Shared/TopMenu.razor
+++ b/BlazorBattles/Client/Shared/TopMenu.razor
@@ -1,8 +1,10 @@
 ﻿<div class="top-menu">
     <img src="icons/I_C_Banana.png" /> @Bananas
+    <AddBananas />
 </div>
 
 
 @code {
+    [Parameter]
     public int Bananas { get; set; } = 100;
 }
