--- a/BlazorBattles/Client/Shared/AddBananas.razor
+++ b/BlazorBattles/Client/Shared/AddBananas.razor
@@ -1,5 +1,12 @@
-﻿<button class="btn btn-info">+</button>
+﻿<button @onclick="IncreaseBananaCount" class="btn btn-info">+</button>
 
 @code {
 
+    [Parameter]
+    public EventCallback<int> BananasAdded { get; set; }
+
+    public void IncreaseBananaCount()
+    {
+        BananasAdded.InvokeAsync(10);
+    }
 }
