--- a/BlazorBattles/Client/Pages/Build.razor
+++ b/BlazorBattles/Client/Pages/Build.razor
@@ -1,7 +1,14 @@
 ﻿@page "/build"
-
+@inject BlazorBattles.Client.Services.IBananaService BananaService
 <h3>Build</h3>
 
+<button @onclick="() => EatBananas(10)">Eat Bananas</button>
+
 @code {
+
+    private void EatBananas(int amount)
+    {
+        BananaService.EatBananas(amount);
+    }
 
 }
