--- a/BlazorBattles/Client/Shared/TopMenu.razor
+++ b/BlazorBattles/Client/Shared/TopMenu.razor
@@ -1,4 +1,7 @@
-﻿<div class="top-menu">
+﻿@inject BlazorBattles.Client.Services.IBananaService BananaService
+@implements IDisposable
+
+<div class="top-menu">
     <img src="icons/I_C_Banana.png" /><span class="popover-header">@Bananas</span>
     <AddBananas BananasAdded="AddBananas" />
 </div>
@@ -11,5 +14,15 @@
     public void AddBananas(int value)
     {
         Bananas += value;
+    }
+
+    protected override void OnInitialized()
+    {
+        BananaService.OnChange += StateHasChanged;
+    }
+
+    public void Dispose()
+    {
+        BananaService.OnChange -= StateHasChanged;
     }
 }
