--- a/BlazorBattles/Client/Shared/TopMenu.razor
+++ b/BlazorBattles/Client/Shared/TopMenu.razor
@@ -2,20 +2,12 @@
 @implements IDisposable
 
 <div class="top-menu">
-    <img src="icons/I_C_Banana.png" /><span class="popover-header">@Bananas</span>
-    <AddBananas BananasAdded="AddBananas" />
+    <img src="icons/I_C_Banana.png" /><span class="popover-header">@BananaService.Bananas</span>
+    <AddBananas />
 </div>
 
 
 @code {
-    [Parameter]
-    public int Bananas { get; set; } = 100;
-
-    public void AddBananas(int value)
-    {
-        Bananas += value;
-    }
-
     protected override void OnInitialized()
     {
         BananaService.OnChange += StateHasChanged;
