--- a/BlazorBattles/Client/Shared/AddBananas.razor
+++ b/BlazorBattles/Client/Shared/AddBananas.razor
@@ -1,10 +1,12 @@
-﻿<button @onclick="IncreaseBananaCount" class="btn btn-info">+</button>
+﻿@inject BlazorBattles.Client.Services.IBananaService BananaService
+
+<button @onclick="IncreaseBananaCount" class="btn btn-info">+</button>
 
 @code {
 
 
     public void IncreaseBananaCount()
     {
-        
+        BananaService.AddBananas(10);
     }
 }
