Army page created and css styling

--- a/BlazorBattles/Client/wwwroot/css/app.css
+++ b/BlazorBattles/Client/wwwroot/css/app.css
@@ -124,6 +124,11 @@ app {
 
 }
 
+.army-list {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px;
+}
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
