--- a/BlazorBattles/Client/Pages/Build.razor
+++ b/BlazorBattles/Client/Pages/Build.razor
@@ -1,6 +1,9 @@
 ﻿@page "/build"
 @inject BlazorBattles.Client.Services.IBananaService BananaService
 @inject BlazorBattles.Client.Services.IUnitService UnitService
+@inject IToastService ToastService
+
+
 <h3>Build</h3>
 <div class="form-group">
     <select @bind="@selectedUnitId" class="form-control">
@@ -31,6 +34,7 @@
         if(BananaService.Bananas < selectedUnit.BananaCost)
         {
             needMoreBananas = true;
+            ToastService.ShowError("Not enough bananas", "Error");
             return;
         }
 
