login page cleanup and page navigation experiment

--- a/BlazorBattles/Client/Pages/Register.razor
+++ b/BlazorBattles/Client/Pages/Register.razor
@@ -1,5 +1,6 @@
 ﻿@page "/register"
 @inject BlazorBattles.Client.Services.IUnitService UnitService
+@inject NavigationManager NavigationManager
 
 <h3>Register</h3>
 
@@ -59,6 +60,6 @@
     BlazorBattles.Shared.UserRegister user = new BlazorBattles.Shared.UserRegister();
 
     void HandleRegistration() {
-        Console.Write("Store this new user in the database!");
+        NavigationManager.NavigateTo("login");
     }
 }
