--- a/BlazorBattles/Client/Pages/Index.razor
+++ b/BlazorBattles/Client/Pages/Index.razor
@@ -1,5 +1,15 @@
 ﻿@page "/"
 
-<h1>Welcome to Blazor Battles by EVOLVE Projects</h1>
+<AuthorizeView>
+    <Authorized>
+        <h1>Hi, @context.User.Identity.Name. Welcome back!</h1>
+        Lets admire <NavLink href="army"> your beloved army.</NavLink>
+    </Authorized>
+    <NotAuthorized>
+        <h1>Welcome to Blazor Battles by EVOLVE Projects</h1>
+        <Login />
+    </NotAuthorized>
+</AuthorizeView>
+
 
 
