Unit receiving from Web API

--- a/BlazorBattles/Client/Pages/Build.razor
+++ b/BlazorBattles/Client/Pages/Build.razor
@@ -45,4 +45,9 @@
         UnitService.AddUnit(selectedUnitId);
     }
 
+    protected override async Task OnInitializedAsync()
+    {
+        await UnitService.LoadUnitsAsync();
+    }
+
 }
