--- a/BlazorBattles/Client/Pages/Register.razor
+++ b/BlazorBattles/Client/Pages/Register.razor
@@ -62,4 +62,9 @@
     void HandleRegistration() {
         NavigationManager.NavigateTo("login");
     }
+
+    protected override async Task OnInitializedAsync()
+    {
+        await UnitService.LoadUnitsAsync();
+    }
 }
