--- a/BlazorBattles/Client/Pages/Build.razor
+++ b/BlazorBattles/Client/Pages/Build.razor
@@ -28,21 +28,9 @@
 
     bool needMoreBananas = false;
 
-    public void BuildUnit()
+    public async Task BuildUnit()
     {
-        BlazorBattles.Shared.Unit selectedUnit = UnitService.Units.FirstOrDefault(unit => unit.Id == selectedUnitId);
-
-        if(BananaService.Bananas < selectedUnit.BananaCost)
-        {
-            needMoreBananas = true;
-            ToastService.ShowError("Not enough bananas", "Error");
-            return;
-        }
-
-        needMoreBananas = false;
-
-        BananaService.EatBananas(selectedUnit.BananaCost);
-        UnitService.AddUnit(selectedUnitId);
+        await UnitService.AddUnit(selectedUnitId);
     }
 
     protected override async Task OnInitializedAsync()
