Revive Army fully implemented fullstack

--- a/BlazorBattles/Client/Pages/Army.razor
+++ b/BlazorBattles/Client/Pages/Army.razor
@@ -25,6 +25,10 @@
         </div>
     }
 
+    <center>
+        <button class="btn btn-warning" @onclick="ReviveArmy">Revive Your Army for a 1000 Bananas</button>
+    </center>
+
 }
 else
 {
@@ -36,5 +40,10 @@ else
     {
         await UnitService.LoadUnitsAsync();
         await UnitService.LoadUserUnitsAsync();
+    }
+
+    private async Task ReviveArmy()
+    {
+        await UnitService.ReviveArmy();
     }
 }
