--- a/BlazorBattles/Client/Pages/Leaderboard.razor
+++ b/BlazorBattles/Client/Pages/Leaderboard.razor
@@ -4,6 +4,7 @@
 @inject BlazorBattles.Client.Services.IBattleService BattleService
 @inject BlazorBattles.Client.Services.IBananaService BananaService
 @inject IToastService ToastService
+@inject NavigationManager NavigationManager
 
 <h3>Leaderboard</h3>
 
@@ -84,5 +85,8 @@ else
 
         await LeaderboardService.GetLeaderBoard();
         await BananaService.GetBananas();
+
+        if (result.RoundsFought > 0)
+            NavigationManager.NavigateTo("battlelog");
     }
 }
